# neuralami-control

./: -name "*.py" | xargs grep -l "apps.agents.utils" | head -10  .cursorignore  .cursorrules  .dockerignore  .env copy  .env.bak  .gitignore  .windsurfrules  Dockerfile  Plan to fix human input in crew executions.md  README.md  agent_task_crew_agent_executor.txt  agents.chat.txt  agents.txt  assistant_snippet_Hs2Hs0Iqxm.txt  assistant_snippet_Ks9mPqL2Hy.txt  assistant_snippet_tXwH7RmN0c.txt  assistant_snippet_tZPifS1QYg.txt  build-docker-images.sh  code.txt  crawl4ai-code.txt  crawl4ai.txt  crawler_result.json  crawler_result_with_links.json  crew_chat.md  d.txt  db_copy.py  db_drop.py  db_import.py  debug_tool_inheritance.py  docker-compose.override.yml.example  docker-compose.prod.yml  docker-compose.release.yml  docker-compose.yml  docker-compose.yml.local  docker-compose.yml.release  entrypoint.sh  erver  field_detection.md  fixed_button.html  (+116 more)
.ai/codex/: codex.md
.ai/session/: start-session.md
.ai/snippets/: tool.md
.ai/status/: 2023-12-22.md
.cursor/rules/: bootstrap.mdc  charts.mdc  client-data-access-patterns.mdc  coding-preference.mdc  coding-workflow-preferences.mdc  htmx-websocket-patterns.mdc  markdown-to-html-process.mdc  secure-file-storage.mdc  tables-datatables.mdc  template-extra-css-js.mdc
TODO/: standardize_securefilestorage.md
apps/agents/: admin.py  apps.py  consumers.py  forms.py  kanban_consumers.py  models.py  tasks.py  tests.py  urls.py  utils.py  views.py  views_agents.py  views_chat.py  views_crews.py  views_kanban.py  views_tasks.py  views_tools.py
apps/api/: serializers.py  (+3 more)
config/: asgi.py  routing.py  settings.py  urls.py
core/: apps.py  asgi.py  b2_storage.py  context_processors.py  minio_storage.py  routing.py  settings.py  storage.py  urls.py  version.py  views.py
docs/: construct-common-client-data-access.md  htmx-websocket-patterns.md  multi-tenancy.md  multitenancy-security.md  seoauditimprovements.md
documentation/: agent_as_tool.md  construct-common-client-data-access.md  context-vars-migration.md  get_llm_token_usage.md  google_cloud_console_setup.md  google_oauth_env_vars.md  isolate_summarizer.md  oauth_migration_plan.md  playwright_adapter_guide.md  playwright_adapter_setup.md  playwright_distributed_crawler_prd.md  scraper_service_guide.md  seo_audit_remediation_prd.md  tool_multi-tenancy.md
file_manager/: file-manager.html
home/: models.py  urls.py  views.py
logs/: fallbackscraper.py  file.txt  fluffy.txt  output.txt  report.md  scraptest.py  test.py  test.txt  test_crawl4ai.py  test_wp_api.py
playwright_service/: Dockerfile  README.md  app.py  build_and_deploy.sh  docker-compose.yml  entrypoint.sh  nginx-config.conf  playwright.subdomain.conf  portainer-stack.yml  rebuild.sh  rebuild_and_test.sh  requirements.txt  test_accel_golf.sh  test_metadata.sh  test_service.py
scripts/: fix_oauth_credentials.py  json_to_env.py  test_oauth_reauthorization.py  test_oauth_scopes.py  test_oauth_simple.py
worker/: Dockerfile
xternal_ref/: agent.py  crewai  deep-research.txt  open_deep_research.txt  reader.txt  searchtools.txt
(+880 files in other folders)
